fix: Button visibility for header control in AppV2 dark mode

--- a/less/dragonbane.less
+++ b/less/dragonbane.less
@@ -97,7 +97,7 @@
 
     font-family: var(--dod-font-primary);
 
-    h1, h2, h3, h4, h5, h6, th, blockquote, button, caption, nav, .dice-roll, .header-button, .title, .heading, .page-title, .npc-title, .monster-title {
+    h1, h2, h3, h4, h5, h6, th, blockquote, button:not(.header-control), caption, nav, .dice-roll, .header-button, .title, .heading, .page-title, .npc-title, .monster-title {
         font-family: var(--dod-font-heading);
     }
     b, strong, td, blockquote, .content-link, .inline-roll {
